[gd_scene load_steps=5 format=2]

[ext_resource path="res://boss/boss_player.gd" type="Script" id=1]
[ext_resource path="res://boss/boss_1.png" type="Texture" id=3]
[ext_resource path="res://player/player_death.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
} ]

[node name="BossPlayer" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 14
moving_platform_apply_velocity_on_leave = 2
script = ExtResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="PlayerDetector"]
position = Vector2( -0.5, 0.4 )
polygon = PoolVector2Array( -84.5, -55.4, 85.5, -55.4, 85.5, 34.6, 25.5, 34.6, 25.5, 64.6, -24.5, 64.6, -24.5, 34.6, -84.5, 34.6 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.5, 0.4 )
polygon = PoolVector2Array( -84.5, -55.4, 85.5, -55.4, 85.5, 34.6, 25.5, 34.6, 25.5, 64.6, -24.5, 64.6, -24.5, 34.6, -84.5, 34.6 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = 5.0

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="animation_finished" from="PlayerSprite" to="." method="_on_PlayerSprite_animation_finished"]
